additional alignment fixes (#680)

--- a/src/app/pages/office/components/vehicle-checks/vehicle-checks-office-card.scss
+++ b/src/app/pages/office/components/vehicle-checks/vehicle-checks-office-card.scss
@@ -2,4 +2,8 @@
   .counter-label {
     color: black;
   }
+  .counter-icon {
+    position: relative;
+    bottom: 2px;
+  }
 }
