--- a/src/components/common/activity-code/activity-code.scss
+++ b/src/components/common/activity-code/activity-code.scss
@@ -64,6 +64,11 @@
     height: 48px;
   }
 
+  .modal-dropdown {
+    position: relative;
+    left: 5px;
+  }
+
   .down-caret-icon {
     color: darkgrey;
     font-size: 14px;
